y.output
Grammar

    0 $accept: unit $end

    1 unit: /* empty */
    2     | TOKBEGIN tokens

    3 tokens: token
    4       | tokens TOKCOMMA token

    5 token: TOKNUMBER
    6      | TOKWORD


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKNUMBER (258) 5
TOKWORD (259) 6
TOKBEGIN (260) 2
TOKCOMMA (261) 4


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
unit (8)
    on left: 1 2, on right: 0
tokens (9)
    on left: 3 4, on right: 2 4
token (10)
    on left: 5 6, on right: 3 4


State 0

    0 $accept: . unit $end

    TOKBEGIN  shift, and go to state 1

    $default  reduce using rule 1 (unit)

    unit  go to state 2


State 1

    2 unit: TOKBEGIN . tokens

    TOKNUMBER  shift, and go to state 3
    TOKWORD    shift, and go to state 4

    tokens  go to state 5
    token   go to state 6


State 2

    0 $accept: unit . $end

    $end  shift, and go to state 7


State 3

    5 token: TOKNUMBER .

    $default  reduce using rule 5 (token)


State 4

    6 token: TOKWORD .

    $default  reduce using rule 6 (token)


State 5

    2 unit: TOKBEGIN tokens .
    4 tokens: tokens . TOKCOMMA token

    TOKCOMMA  shift, and go to state 8

    $default  reduce using rule 2 (unit)


State 6

    3 tokens: token .

    $default  reduce using rule 3 (tokens)


State 7

    0 $accept: unit $end .

    $default  accept


State 8

    4 tokens: tokens TOKCOMMA . token

    TOKNUMBER  shift, and go to state 3
    TOKWORD    shift, and go to state 4

    token  go to state 9


State 9

    4 tokens: tokens TOKCOMMA token .

    $default  reduce using rule 4 (tokens)
